2002-07-05  Matti Aarnio  <mea@zmailer.org>

	* lib/sleepycatdb.c, include/sleepycatdb.c, router/libdb/bsdbtree.c,
	  router/libdb/bsdhash.c
	    More rework on SleepyCat DB driver routines to better use
	    the ZSleepyPrivate structure to carry relevant reference data.
	
	* router/libdb/gdbm.c:
	    Similar code work to SleepyCat DB for GDBM.

	* router/db.c, router/function.c, router/prototypes.h,
	  router/libdb/search.h:
	    - Renamed the low-level dblookup driver routine from
	      'db()' to 'dblookup()' after having problems of finding
	      the caller...
	    - Reworked the %-substitution code radically; now %[1-9] will
	      be a key of same index at every time.  The  %0 MAY change
	      in case some driver routine (e.g. 'pathalias') is defined
	      at the 'relation' statement.  The relation MUST have
	      '-%' option for the %[0-9] substitutions to be active!

2002-06-25  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    Separating DATA ending dot into separately done write(2),
	    which hopefully leads into separately pushed out frame,
	    and finally packet separation at the DATA-phase ending dot
	    sending..  World is full of braindead firewalls...

	* include/sleepycatdb.h, lib/sleepycatdb.c,
	  router/libdb/bsdbtree.c, router/libdb/bsdhash.c:
	    More work at the SleepyCat DB Concurrent Data Store  support.

	* router/db.c:
	    Clean a bit of the database call mechanism passed parameter block
	    by doing initial memset(,0,) on it..

	* libc/mail.c, libc/sfmail.c:
	    Change (slightly) of how the initial temporary file name
	    is formed so that there are no leading white spaces at a
	    host which has shorter than 7 chars hostname..

2002-06-20  Matti Aarnio  <mea@zmailer.org>

	* include/sleepycatdb.h, lib/sleepycatdb.c, proto/newdbprocessor.in:
	    More of  SleepyCat DB support stuff.

	* smtpserver/smtpauth.c:
	    Stole code (yet incomplete, and not integrated) from sendmail