@@ -6,7 +6,8 @@
 #|  This is used by  'zmailer newdb'  command to generate all databases
 #|  described here, and to produce relevant  .zmsh  scripts for the
 #|  router to use things.  The  'zmailer newdb' invocation does not mandate
-#|  router restart in case the database definitions have not changed
+#|  router restart in case the database definitions have not changed,
+#|  mere database recompilation is handled without restarts.
 #|  (reverse is true:  If definitions are added/modified/removed, the router
 #|                     MUST be restarted)
 #|
@@ -19,13 +20,24 @@
 #|                     dbfile (or "-")
 #|                         dbflags (or "-") ... (until end of line)
 #|
+#| The 'relation-name' are a set of magic tokens (listed below), which
+#| system scripts support.  There can be any number of databases for
+#| any given 'relation-name'.  Those are scanned in order, first match
+#| wins.  (E.g. you can have multiple 'aliases' relations.)
+#|
 #| The  dbtype  can be "magic" '$DBTYPE', or any other valid database
 #| type for the Router.  Somewhat magic treatment (newdb runs) are
 #| done when the dbtype is any of: *DBTYPE/dbm/gdbm/ndbm/btree
 #|
+#| The  newdb_compile_options  are used when recompiling the database
+#| with 'newdb' command.
+#|
 #| The "dbfile" need not be located underneath of $MAILVAR, as long as
 #| it is in system local filesystem (for performance reasons.)  E.g.
 #| one can place one of e.g. aliases files to some persons directory.
+#| Implicite assumption is, that the 'newdb' produces the database
+#| with same name, as what the "dbfile" fields says -- appending only
+#| database type specific magic tail(s).
 #|
 #| At  dbflags  (until end of the line), characters ':' and '%' have special
 #| meaning as their existence generates lookup routines which pass user's
@@ -38,6 +50,7 @@
 #| aliases         $DBTYPE  0:0:644    -la $MAILVAR/db/aliases        -lm
 #| aliases         $DBTYPE  root:0:644 -la $MAILVAR/db/aliases-2      -lm
 #| fqdnaliases     $DBTYPE  root:0:644 -la $MAILVAR/db/fqdnaliases    -lm
+#| fqdnroutes      $DBTYPE  root:0:644 -la $MAILVAR/db/fqdnroutes     -lm%:
 #| userdb          $DBTYPE  root:0:644 -l  $MAILVAR/db/userdb         -lm
 #|
 #|Security insensitive ones ("dbpriv" need not be defined!)
@@ -72,6 +85,7 @@ aliases		NONE - - - -
 expired		NONE - - - -
 fqdnaliasesldap	NONE - - - -
 fqdnaliases	NONE - - - -
+fqdnroutes	NONE - - - -
 fullnamemap	NONE - - - -
 iproutesdb	NONE - - - -
 newsgroup	NONE - - - -
